--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   <p id="quote-text">“Loading…“</p>
   <p id="quote-author"></p>
 </div>
+<small>
+  Quotes provided by <a href="https://zenquotes.io" target="_blank" rel="noopener noreferrer">ZenQuotes.io</a>
+</small>
 
   <script src="/script.js"></script>
   <script src="/quote.js"></script>
