--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   <label for="task-time">Time</label>
   <input type="time" id="task-time" required>
 
+  <label for="task-notes">Task Notes</label>
+  <textarea id="task-notes" name="task-notes" rows="4" placeholder="Add extra details..."></textarea>
+
   <button type="submit">Add Task</button>
 </form>
 
