--- a/tasks.html
+++ b/tasks.html
@@ -22,6 +22,9 @@
     <p id="current-time"></p>
   </div>
   <div id="task-container"></div>
+  <div id="task-history">
+  <h2 style="text-align: center; margin-top: 40px;">Task History</h2>
+</div>
   <script src="/script.js"></script>
 </body>
 </html>
