--- a/tasks.html
+++ b/tasks.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+
   <link rel="stylesheet" href="/style.css">
   <title>Document</title>
 </head>
@@ -25,6 +27,6 @@
   <div id="task-history">
   <h2 style="text-align: center; margin-top: 40px;">Task History</h2>
 </div>
-  <script src="/script.js"></script>
+  <script  type="module" src="/script.js"></script>
 </body>
 </html>
