--- a/schedule.html
+++ b/schedule.html
@@ -20,6 +20,6 @@
     </nav>
   </header>
   <div id="schedule-container"></div>
-  <script src="/schedule.js"></script>
+  <script type="module" src="/schedule.js"></script>
 </body>
 </html>
