--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </nav>
   </header>
 <form id="task-form">
+
+
+
   <label for="task-text">Task</label>
   <input type="text" id="task-text" required>
 
@@ -37,8 +40,8 @@
 
   <button type="submit">Add Task</button>
 </form>
+</div>
 
- 
 
   <script type="module" src="/script.js"></script>
 </body>
