Initial backend commit

--- a/frontend/tasks.html
+++ b/frontend/tasks.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/frontend/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
     <nav>
       <ul>
         <h1>The Plan</h1>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/tasks.html">Tasks</a></li>
-        <li><a href="/schedule.html">Schedule</a></li>
+        <li><a href="/frontend/index.html">Home</a></li>
+        <li><a href="/frontend/tasks.html">Tasks</a></li>
+        <li><a href="/frontend/schedule.html">Schedule</a></li>
       </ul>
     </nav>
   </header>
@@ -27,6 +27,6 @@
   <div id="task-history">
   <h2 style="text-align: center; margin-top: 40px;">Task History</h2>
 </div>
-  <script  type="module" src="/script.js"></script>
+  <script  type="module" src="/frontend/script.js"></script>
 </body>
 </html>
