--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Document</title>
 </head>
 <body>
@@ -16,9 +16,9 @@
     <nav>
       <ul>
         <h1>The Plan</h1>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/tasks.html">Tasks</a></li>
-        <li><a href="/schedule.html">Schedule</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./tasks.html">Tasks</a></li>
+        <li><a href="./schedule.html">Schedule</a></li>
       </ul>
     </nav>
   </header>
@@ -43,6 +43,6 @@
 </div>
 
 
-  <script type="module" src="/script.js"></script>
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
