--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  
 
-  <link rel="stylesheet" href="/frontend/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
@@ -13,14 +13,14 @@
     <nav>
       <ul>
         <h1>The Plan</h1>
-        <li><a href="/frontend/index.html">Home</a></li>
-        <li><a href="/frontend/tasks.html">Tasks</a></li>
-        <li><a href="/frontend/schedule.html">Schedule</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tasks.html">Tasks</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
       </ul>
     </nav>
   </header>
   <h1 id="heading-schedule">Schedule</h1>
   <div id="schedule-container"></div>
-  <script  src="/frontend/schedule.js"></script>
+  <script  src="schedule.js"></script>
 </body>
 </html>
