--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,14 +17,13 @@
       <ul>
         <h1>The Plan</h1>
         <li><a href="index.html">Home</a></li>
+        <li><a href="goals.html">Goals</a></li>
         <li><a href="tasks.html">Tasks</a></li>
         <li><a href="schedule.html">Schedule</a></li>
       </ul>
     </nav>
   </header>
 <form id="task-form">
-
-
 
   <label for="task-text">Task</label>
   <input type="text" id="task-text" required>
@@ -40,7 +39,7 @@
 
   <button type="submit">Add Task</button>
 </form>
-</div>
+
 
 
   <script type="module" src="script.js"></script>
