--- a/frontend/daily.html
+++ b/frontend/daily.html
@@ -12,6 +12,7 @@
       <ul>
         <h1>The Plan</h1>
         <li><a href="index.html">Home</a></li>
+        <li><a href="daily.html">Daily</a></li>
         <li><a href="goals.html">Goals</a></li>
         <li><a href="tasks.html">Tasks</a></li>
         <li><a href="schedule.html">Schedule</a></li>
