--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="page-content">
 <header class="head">
   <div class="nav-container">
     <h1 class="logo">The Plan</h1>
@@ -52,9 +53,14 @@
 
   <button type="submit">Add Task</button>
 </form>
+  </div>
 
-
-
+  <footer class="footer">
+    <span>Eat</span>
+    <span>Sleep</span>
+    <span>Code</span>
+    <span>Repeat</span>
+  </footer>
   <script type="module" src="script.js"></script>
   <script src="nav.js"></script>
 </body>
