--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -3,16 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Cache-Control" content="no-store" />
-
-
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
-  <div class="page-content">
+    <div class="page-content">
 <header class="head">
   <div class="nav-container">
     <h1 class="logo">The Plan</h1>
@@ -35,22 +30,23 @@
     </nav>
   </div>
 </header>
+  <h2>My Notes</h2>
+    <div class="note-input-card">
+  <input type="text" id="note-title" placeholder="Note title" />
+  <input type="date" id="note-date" />
+  <textarea id="note-content" placeholder="Write your thoughts..."></textarea>
+  <button id="save-note-btn">Save Note</button>
+</div>
 
-<h2>Weekly Tasks</h2>
-<div id="weekly-tasks-container"></div>
-
-
-
-
-  </div>
-
-  <footer class="footer">
+<div id="notes-container"></div>
+</div>
+<footer class="footer">
     <span>Eat</span>
     <span>Sleep</span>
     <span>Code</span>
     <span>Repeat</span>
   </footer>
-  <script type="module" src="script.js"></script>
-  <script src="nav.js"></script>
+<script src="notes.js"></script>
+<script src="nav.js"></script>
 </body>
 </html>
