--- a/frontend/tasks.html
+++ b/frontend/tasks.html
@@ -9,18 +9,46 @@
   <title>Document</title>
 </head>
 <body>
-  <header class="head">
+  <div class="page-content">
+<header class="head">
+  <div class="nav-container">
+    <h1 class="logo">The Plan</h1>
+
+    <button class="hamburger" aria-label="Toggle menu">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
+
     <nav>
-      <ul>
-        <h1>The Plan</h1>
+      <ul class="main-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="daily.html">Daily</a></li>
         <li><a href="goals.html">Goals</a></li>
+        <li><a href="notes.html">Notes</a></li>
         <li><a href="tasks.html">Tasks</a></li>
         <li><a href="schedule.html">Schedule</a></li>
       </ul>
     </nav>
-  </header>
+  </div>
+</header>
+
+<form id="task-form">
+
+  <label for="task-text">Task</label>
+  <input type="text" id="task-text" required>
+
+  <label for="task-date">Date</label>
+  <input type="date" id="task-date" required>
+
+  <label for="task-time">Time</label>
+  <input type="time" id="task-time" required>
+
+  <label for="task-notes">Task Notes</label>
+  <textarea id="task-notes" name="task-notes" rows="4" placeholder="Add extra details..."></textarea>
+
+  <button type="submit">Add Task</button>
+</form>
   <div id="datetime-bar">
     <p id="current-date"></p>
     <p id="current-time"></p>
@@ -29,6 +57,14 @@
   <div id="task-history">
   <h2 style="text-align: center; margin-top: 40px;">Task History</h2>
 </div>
+</div>
+<footer class="footer">
+    <span>Eat</span>
+    <span>Sleep</span>
+    <span>Code</span>
+    <span>Repeat</span>
+  </footer>
   <script  type="module" src="script.js"></script>
+  <script src="nav.js"></script>
 </body>
 </html>
