--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,10 @@
 <div id="weekly-tasks-container"></div>
 
 
+<section id="quote-section">
+  <h2 class="quote-title">💬 Daily Motivation</h2>
+  <p id="quote-box" class="quote-text"></p>
+</section>
 
 
   </div>
@@ -52,5 +56,6 @@
   </footer>
   <script type="module" src="script.js"></script>
   <script src="nav.js"></script>
+  <script src="quotes.js"></script>
 </body>
 </html>
