--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,13 +15,19 @@
   <div class="page-content">
 <header class="head">
   <div class="nav-container">
+    <div class="nav-left">
     <h1 class="logo">The Plan</h1>
-
+    </div>
+    <div class="nav-center">
+    <h2 class="nav-quote">Get this shit done.</h2>
+    </div>
+    <div class="nav-right">
     <button class="hamburger" aria-label="Toggle menu">
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
     </button>
+    </div>
 
     <nav>
       <ul class="main-nav">
