--- a/frontend/goals.html
+++ b/frontend/goals.html
@@ -30,6 +30,7 @@
     </nav>
   </div>
 </header>
+  <h2>Goals</h2>
   <form id="weekly-goal-form">
   <label for="goal-title">Goal Title</label>
   <input type="text" id="goal-title" required>
