--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,6 +45,12 @@
 <h2>Weekly Tasks</h2>
 <div id="weekly-tasks-container"></div>
 
+<section id="pinned-notes-home">
+  <h2>Pinned Notes</h2>
+  <div id="pinned-notes-container"></div>
+</section>
+
+
 
 <section id="quote-section">
   <h2 class="quote-title">💬 Daily Motivation</h2>
