--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,5 +69,6 @@
   <script type="module" src="script.js"></script>
   <script src="nav.js"></script>
   <script src="quotes.js"></script>
+  <script src="home.js"></script>
 </body>
 </html>
