--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,13 @@
 </header>
 
 <h2>Weekly Tasks</h2>
-<div id="weekly-tasks-container"></div>
+<section id="daily-focus-section" class="daily-focus-section">
+  <h2>Daily Focus</h2>
+  <input type="text" id="daily-focus-input" placeholder="What's your main focus today?" />
+  <button id="save-focus-btn">Save</button>
+  <p id="saved-focus-text"></p>
+</section>
+
 
 <section id="pinned-notes-home">
   <h2>Pinned Notes</h2>
