--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="home.css">
   <title>Document</title>
 </head>
 <body>
@@ -41,8 +42,7 @@
     </nav>
   </div>
 </header>
-
-<h2>Weekly Tasks</h2>
+<div id="home">
 <section id="daily-focus-section" class="daily-focus-section">
   <h2>Daily Focus</h2>
   <input type="text" id="daily-focus-input" placeholder="What's your main focus today?" />
@@ -62,7 +62,7 @@
   <h2 class="quote-title">💬 Daily Motivation</h2>
   <p id="quote-box" class="quote-text"></p>
 </section>
-
+</div>
 
   </div>
 
