--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,7 @@
     <nav>
       <ul class="main-nav">
         <li><a href="index.html">Home</a></li>
+        <li><a href="lessons.html">Lessons</a></li>
         <li><a href="daily.html">Daily</a></li>
         <li><a href="goals.html">Goals</a></li>
         <li><a href="notes.html">Notes</a></li>
@@ -62,6 +63,9 @@
   <h2 class="quote-title">💬 Daily Motivation</h2>
   <p id="quote-box" class="quote-text"></p>
 </section>
+
+
+
 </div>
 
   </div>
