--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -10,17 +10,24 @@
     <div class="page-content">
 <header class="head">
   <div class="nav-container">
+    <div class="nav-left">
     <h1 class="logo">The Plan</h1>
-
+    </div>
+    <div class="nav-center">
+    <h2 class="nav-quote">Get this shit done.</h2>
+    </div>
+    <div class="nav-right">
     <button class="hamburger" aria-label="Toggle menu">
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
     </button>
+    </div>
 
     <nav>
       <ul class="main-nav">
         <li><a href="index.html">Home</a></li>
+        <li><a href="lessons.html">Lessons</a></li>
         <li><a href="daily.html">Daily</a></li>
         <li><a href="goals.html">Goals</a></li>
         <li><a href="notes.html">Notes</a></li>
