--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,6 +64,8 @@
   <p id="quote-box" class="quote-text"></p>
 </section>
 
+<button id="ask-ai-btn">Ask AI</button>
+<div id="ai-result" style="margin-top: 10px;"></div>
 
 
 </div>
@@ -80,5 +82,6 @@
   <script src="nav.js"></script>
   <script src="quotes.js"></script>
   <script src="home.js"></script>
+  <script src="ai.js"></script>
 </body>
 </html>
