--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -6,6 +6,7 @@
   
 
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="schedule.css">
   <title>Document</title>
 </head>
 <body>
