--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,12 +12,18 @@
   <link rel="stylesheet" href="home.css">
   <title>Document</title>
 </head>
+<div id="loading-screen">
+  <div class="loading-content">
+    <h1 class="life-logo">Life<span>OS</span></h1>
+    <div class="loader-ring"></div>
+  </div>
+</div>
 <body>
   <div class="page-content">
 <header class="head">
   <div class="nav-container">
     <div class="nav-left">
-    <h1 class="logo">The Plan</h1>
+    <h1 class="logo">Life OS</h1>
     </div>
     <div class="nav-center">
     <h2 class="nav-quote">Get this shit done.</h2>
@@ -83,5 +89,6 @@
   <script src="quotes.js"></script>
   <script src="home.js"></script>
   <script src="ai.js"></script>
+  <script src="screen.js"></script>
 </body>
 </html>
