--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,8 +70,13 @@
   <p id="quote-box" class="quote-text"></p>
 </section>
 
-<button id="ask-ai-btn">Ask AI</button>
-<div id="ai-result" style="margin-top: 10px;"></div>
+<div id="ai-input-group">
+  <input type="text" id="ai-task-input" placeholder="Describe a task and let AI add it..." />
+  <button id="ask-ai-btn">Add</button>
+</div>
+<div id="ai-result"></div>
+
+
 
 
 </div>
