--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,11 +70,21 @@
   <p id="quote-box" class="quote-text"></p>
 </section>
 
-<div id="ai-input-group">
-  <input type="text" id="ai-task-input" placeholder="Describe a task and let AI add it..." />
-  <button id="ask-ai-btn">Add</button>
+<!-- Floating AI Chat -->
+<!-- Floating AI Chat -->
+<div id="ai-chatbox-wrapper">
+  <button id="open-ai-chat">&#128172;</button>
+
+  <div id="ai-chatbox" class="hidden">
+    <div id="ai-chat-messages"></div>
+    <form id="ai-chat-form">
+      <input type="text" id="ai-task-input" placeholder="Describe a task and let AI add it..." />
+      <button type="submit" id="ask-ai-btn">Add</button>
+    </form>
+  </div>
 </div>
-<div id="ai-result"></div>
+
+
 
 
 
