--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,6 +63,20 @@
   <div id="pinned-notes-container"></div>
 </section>
 
+<section id="stats-dashboard">
+  <h2>Stats & Streaks</h2>
+  <div id="stats-overview">
+    <div class="stat-card" id="tasks-completed">Tasks Completed: 0</div>
+    <div class="stat-card" id="goals-completed">Goals Completed: 0</div>
+    <div class="stat-card" id="lessons-completed">Lessons Completed: 0</div>
+  </div>
+
+  <div id="streaks-overview">
+    <div class="stat-card" id="task-streak">Task Streak: 0 days</div>
+    <div class="stat-card" id="goal-streak">Goal Streak: 0 days</div>
+    <div class="stat-card" id="lesson-streak">Lesson Streak: 0 days</div>
+  </div>
+</section>
 
 
 <section id="quote-section">
