--- a/frontend/daily.html
+++ b/frontend/daily.html
@@ -39,27 +39,52 @@
   </div>
 </header>
   <div id="daily">
-  <h2>Today's Tasks</h2>
-  <div id="log-tasks-container"></div>
+  <section id="log-tasks-section">
+    <h2>Today's Tasks</h2>
+    <div id="log-tasks-container"></div>
+  </section>
 
-  <h2>Today's Goals</h2>
-  <div id="log-goals-container"></div>
+  <section id="log-lessons-section">
+    <h2>Lessons for Today</h2>
+    <div id="log-lessons-container"></div>
+  </section>
 
-  <h2>Personal Log</h2>
-  <form id="daily-log-form">
-    <label for="log-title">Title</label>
-    <input type="text" name="" id="log-title" required>
-
-    <label for="log-content">Reflection</label>
-    <textarea name="" id="log-content" rows="6" required></textarea>
-
-    <button type="submit">Add Log</button>
-  </form>
+  <section id="log-goals-section">
+    <h2>Today's Goals</h2>
+    <div id="log-goals-container"></div>
+  </section>
 
 
-
-  <div id="daily-log-entries"></div>
+  <section id="daily-time-tracker">
+  <h2>Time Tracker</h2>
+  <div>
+    <label for="time-spent">Time spent on focused work (in minutes):</label>
+    <input type="number" id="time-spent" min="0" />
+    <button id="save-time-btn">Save</button>
   </div>
+  <p id="saved-time-text"></p>
+</section>
+
+
+  <section id="daily-log-form-wrapper">
+    <h2>Personal Log</h2>
+    <form id="daily-log-form">
+      <label for="log-title">Title</label>
+      <input type="text" id="log-title" required>
+
+      <label for="log-content">Reflection</label>
+      <textarea id="log-content" rows="6" required></textarea>
+
+      <button type="submit">Add Log</button>
+    </form>
+  </section>
+
+  <section id="daily-log-entries-wrapper">
+    <h2>Today's Log</h2>
+    <div id="daily-log-entries"></div>
+  </section>
+</div>
+
   </div>
   <footer class="footer">
     <span>Eat</span>
