--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,123 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Cache-Control" content="no-store" />
-
-
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="home.css">
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="home.css" />
+  <link rel="stylesheet" href="animations.css">
   <title>Document</title>
 </head>
-<div id="loading-screen">
-  <div class="loading-content">
-    <h1 class="life-logo">Life<span>OS</span></h1>
-    <div class="loader-ring"></div>
-  </div>
-</div>
+
 <body>
+<div id="splash-screen">
+  <video autoplay muted playsinline id="splash-video" preload="auto">
+    <source src="screen.mp4" type="video/mp4" />
+  </video>
+</div>
+
+
+
+  <!-- Main Page Content -->
   <div class="page-content">
-<header class="head">
-  <div class="nav-container">
-    <div class="nav-left">
-    <h1 class="logo">Life OS</h1>
+    <header class="head">
+      <div class="nav-container">
+        <div class="nav-left">
+          <img class="logo" src="logo.png" alt="">
+        </div>
+        <div class="nav-center">
+          <h2 class="nav-quote">Get this shit done.</h2>
+        </div>
+        <div class="nav-right">
+          <button class="hamburger" aria-label="Toggle menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </button>
+        </div>
+
+        <nav>
+          <ul class="main-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="lessons.html">Lessons</a></li>
+            <li><a href="daily.html">Daily</a></li>
+            <li><a href="goals.html">Goals</a></li>
+            <li><a href="notes.html">Notes</a></li>
+            <li><a href="tasks.html">Tasks</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <div id="home">
+      <section id="daily-focus-section" class="daily-focus-section">
+        <h2>Daily Focus</h2>
+        <input type="text" id="daily-focus-input" placeholder="What's your main focus today?" />
+        <button id="save-focus-btn">Save</button>
+        <p id="saved-focus-text"></p>
+      </section>
+
+      <section id="pinned-notes-home">
+        <h2>Pinned Notes</h2>
+        <div id="pinned-notes-container"></div>
+      </section>
+
+      <section id="stats-dashboard">
+        <h2>Stats & Streaks</h2>
+        <div id="stats-overview">
+          <div class="stat-card" id="tasks-completed">Tasks Completed: 0</div>
+          <div class="stat-card" id="goals-completed">Goals Completed: 0</div>
+          <div class="stat-card" id="lessons-completed">Lessons Completed: 0</div>
+        </div>
+
+        <div id="streaks-overview">
+          <div class="stat-card" id="task-streak">Task Streak: 0 days</div>
+          <div class="stat-card" id="goal-streak">Goal Streak: 0 days</div>
+          <div class="stat-card" id="lesson-streak">Lesson Streak: 0 days</div>
+        </div>
+      </section>
+
+      <section id="quote-section">
+        <h2 class="quote-title">💬 Daily Motivation</h2>
+        <p id="quote-box" class="quote-text"></p>
+      </section>
+
+      <!-- Floating AI Chat -->
+      <div id="ai-chatbox-wrapper">
+        <button id="open-ai-chat">&#128172;</button>
+
+        <div id="ai-chatbox" class="hidden">
+          <div id="ai-chat-messages"></div>
+          <form id="ai-chat-form">
+            <input type="text" id="ai-task-input" placeholder="Describe a task and let AI add it..." />
+            <button type="submit" id="ask-ai-btn">Add</button>
+          </form>
+        </div>
+      </div>
     </div>
-    <div class="nav-center">
-    <h2 class="nav-quote">Get this shit done.</h2>
-    </div>
-    <div class="nav-right">
-    <button class="hamburger" aria-label="Toggle menu">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </button>
-    </div>
-
-    <nav>
-      <ul class="main-nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="lessons.html">Lessons</a></li>
-        <li><a href="daily.html">Daily</a></li>
-        <li><a href="goals.html">Goals</a></li>
-        <li><a href="notes.html">Notes</a></li>
-        <li><a href="tasks.html">Tasks</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-<div id="home">
-<section id="daily-focus-section" class="daily-focus-section">
-  <h2>Daily Focus</h2>
-  <input type="text" id="daily-focus-input" placeholder="What's your main focus today?" />
-  <button id="save-focus-btn">Save</button>
-  <p id="saved-focus-text"></p>
-</section>
-
-
-<section id="pinned-notes-home">
-  <h2>Pinned Notes</h2>
-  <div id="pinned-notes-container"></div>
-</section>
-
-<section id="stats-dashboard">
-  <h2>Stats & Streaks</h2>
-  <div id="stats-overview">
-    <div class="stat-card" id="tasks-completed">Tasks Completed: 0</div>
-    <div class="stat-card" id="goals-completed">Goals Completed: 0</div>
-    <div class="stat-card" id="lessons-completed">Lessons Completed: 0</div>
   </div>
 
-  <div id="streaks-overview">
-    <div class="stat-card" id="task-streak">Task Streak: 0 days</div>
-    <div class="stat-card" id="goal-streak">Goal Streak: 0 days</div>
-    <div class="stat-card" id="lesson-streak">Lesson Streak: 0 days</div>
+
+
+<footer class="footer">
+  <span id="eat">Eat</span>
+  <span id="sleep">Sleep</span>
+  <span id="code">Code</span>
+  <span id="repeat">Repeat</span>
+</footer>
+
+<div id="fork-fly"></div>
+
+
+<div id="z-animation">
+  <span class="z">Z</span>
+  <span class="z">Z</span>
+  <span class="z">Z</span>
+</div>
+
+<div id="code-editor-popup" class="hidden">
+  <div class="code-editor-header">
+    <span id="close-editor">×</span>
   </div>
-</section>
 
-
-<section id="quote-section">
-  <h2 class="quote-title">💬 Daily Motivation</h2>
-  <p id="quote-box" class="quote-text"></p>
-</section>
-
-<!-- Floating AI Chat -->
-<!-- Floating AI Chat -->
-<div id="ai-chatbox-wrapper">
-  <button id="open-ai-chat">&#128172;</button>
-
-  <div id="ai-chatbox" class="hidden">
-    <div id="ai-chat-messages"></div>
-    <form id="ai-chat-form">
-      <input type="text" id="ai-task-input" placeholder="Describe a task and let AI add it..." />
-      <button type="submit" id="ask-ai-btn">Add</button>
-    </form>
+  <div class="code-editor-tabs">
+    <button class="tab-button active" data-tab="html">HTML</button>
+    <button class="tab-button" data-tab="css">CSS</button>
+    <button class="tab-button" data-tab="js">JS</button>
+    <button class="tab-button" data-tab="output">Output</button>
   </div>
+
+  <div class="code-editor-body">
+    <textarea id="tab-html" class="editor-tab active" placeholder="HTML goes here..."></textarea>
+    <textarea id="tab-css" class="editor-tab" placeholder="CSS goes here..."></textarea>
+    <textarea id="tab-js" class="editor-tab" placeholder="JavaScript goes here..."></textarea>
+    <iframe id="tab-output" class="editor-tab"></iframe>
+  </div>
+
+  <button id="run-code">Run</button>
 </div>
 
 
 
 
 
+<script src="script.js" defer></script>
+<script src="nav.js" defer></script>
+<script src="quotes.js" defer></script>
+<script src="home.js" defer></script>
+<script src="ai.js" defer></script>
+<script src="screen.js" defer></script>
+<script src="animate.js" defer></script>
 
-</div>
 
-  </div>
-
-  <footer class="footer">
-    <span>Eat</span>
-    <span>Sleep</span>
-    <span>Code</span>
-    <span>Repeat</span>
-  </footer>
-  <script type="module" src="script.js"></script>
-  <script src="nav.js"></script>
-  <script src="quotes.js"></script>
-  <script src="home.js"></script>
-  <script src="ai.js"></script>
-  <script src="screen.js"></script>
 </body>
 </html>
