--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,6 +44,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="lessons.html">Lessons</a></li>
             <li><a href="daily.html">Daily</a></li>
+            <li><a href="weekly.html">weekly</a></li>
             <li><a href="goals.html">Goals</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li><a href="tasks.html">Tasks</a></li>
