update the weekly page and added a menu for the pagfes in the nav

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,18 +40,26 @@
         </div>
 
         <nav>
-          <ul class="main-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="lessons.html">Lessons</a></li>
-            <li><a href="daily.html">Daily</a></li>
-            <li><a href="weekly.html">weekly</a></li>
-            <li><a href="goals.html">Goals</a></li>
-            <li><a href="notes.html">Notes</a></li>
-            <li><a href="tasks.html">Tasks</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-          </ul>
-        </nav>
-      </div>
+  <ul class="main-nav">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="lessons.html">Lessons</a></li>
+
+    <li class="dropdown">
+      <a href="daily.html">Daily ▾</a>
+      <ul class="dropdown-menu">
+        <li><a href="daily.html">Daily</a></li>
+        <li><a href="weekly.html">Weekly</a></li>
+        <li><a href="monthly.html">Monthly</a></li>
+      </ul>
+    </li>
+
+    <li><a href="goals.html">Goals</a></li>
+    <li><a href="notes.html">Notes</a></li>
+    <li><a href="tasks.html">Tasks</a></li>
+    <li><a href="schedule.html">Schedule</a></li>
+  </ul>
+</nav>
+
     </header>
 
     <div id="home">
