--- a/frontend/weekly.html
+++ b/frontend/weekly.html
@@ -41,28 +41,31 @@
 
      <div id="week-range" class="week-range-bar"></div>
 <div id="weekly-page">
-    <section id="weekly-tasks" class="weekly-section">
-      <h2>This Week's Tasks</h2>
-      <div class="weekly-container" id="weekly-tasks-container"></div>
-    </section>
+  <section id="weekly-tasks-section">
+    <h2>This Week's Tasks</h2>
+    <div id="weekly-tasks-container" class="content-box"></div>
+  </section>
 
-    <section id="weekly-goals" class="weekly-section">
-      <h2>This Week's Goals</h2>
-      <div class="weekly-container" id="weekly-goals-container"></div>
-    </section>
+  <section id="weekly-goals-section">
+    <h2>This Week's Goals</h2>
+    <div id="weekly-goals-container" class="content-box"></div>
+  </section>
 
-    <section id="weekly-lessons" class="weekly-section">
-      <h2>This Week's Lessons</h2>
-      <div class="weekly-container" id="weekly-lessons-container"></div>
-    </section>
+  <section id="weekly-lessons-section">
+    <h2>This Week's Lessons</h2>
+    <div id="weekly-lessons-container" class="content-box"></div>
+  </section>
 
-    <section id="weekly-reflections" class="weekly-section">
-      <h2>Weekly Reflection</h2>
+  <section id="weekly-reflections-section">
+    <h2>Weekly Reflection</h2>
+    <div class="content-box">
       <textarea id="reflection-textarea" rows="6" placeholder="What went well? What could improve?"></textarea>
       <button id="save-reflection">Save Reflection</button>
-    </section>
-  </div>
-  </div>
+    </div>
+  </section>
+</div>
+
+
   </div>
 <footer class="footer">
   <span id="eat">Eat</span>
