--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,6 +42,7 @@
         <nav>
   <ul class="main-nav">
     <li><a href="index.html">Home</a></li>
+    <li><a href="ai.html">AI</a></li>
     <li><a href="lessons.html">Lessons</a></li>
 
     <li class="dropdown">
