--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
 
 
 <div class="page-content">
-   <header class="head">
+ <header class="head">
   <div class="nav-container">
     <div class="nav-left">
       <img class="logo" src="logo.png" alt="">
@@ -40,15 +40,24 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="ai.html">AI</a></li>
           <li><a href="lessons.html">Lessons</a></li>
+
           <li class="dropdown">
             <a href="#" class="dropdown-toggle">Daily ▾</a>
+
+            <!-- Desktop dropdown menu -->
+            <ul class="dropdown-menu">
+              <li><a href="daily.html">Daily</a></li>
+              <li><a href="weekly.html">Weekly</a></li>
+            </ul>
           </li>
+
           <li><a href="goals.html">Goals</a></li>
           <li><a href="notes.html">Notes</a></li>
           <li><a href="tasks.html">Tasks</a></li>
           <li><a href="schedule.html">Schedule</a></li>
         </ul>
 
+        <!-- Mobile slide-in submenu -->
         <ul class="submenu-panel" id="submenu">
           <li><a href="daily.html">Daily</a></li>
           <li><a href="weekly.html">Weekly</a></li>
@@ -57,6 +66,7 @@
     </div>
   </div>
 </header>
+
 
 
     <div id="home">
