--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,7 @@
       </section>
 
       <!-- Floating AI Chat -->
-      <div id="ai-chatbox-wrapper">
+      <div id="ai-chatbox-wrapper" class="hidden">
         <button id="open-ai-chat">&#128172;</button>
 
         <div id="ai-chatbox" class="hidden">
