--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,6 +31,7 @@
 
   <div class="page-content">
     <!-- Header -->
+     
     <header class="head">
       <div class="nav-container">
         <div class="nav-left">
@@ -105,7 +106,7 @@
       </section>
 
       <!-- Floating AI Chat (hidden on mobile, visible on desktop) -->
-<div id="ai-chatbox-wrapper" class="hidden md:block !md:block">
+<div id="ai-chatbox-wrapper" class="hidden md:block">
   <button id="open-ai-chat">&#128172;</button>
 
   <div id="ai-chatbox" class="hidden">
